<resources>
    <string name="app_name">Swiggy_R</string>
    <string name="welcome_to_swiggy">Welcome to Swiggy</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name_minimum_3_characters">Name (Minimum 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up.</string>
    <string name="password">Password</string>
    <string name="preference_file_name">Swiggy Preferences</string>
    <string name="next">Next</string>
</resources>
